# 2d-game

./: .clang-tidy  .gitignore  CMakeLists.txt  README.md
src/: main.cpp
src/components/: cursor_direction.hpp  hit_points.hpp  player.hpp  position.hpp  projectile.hpp  shape_color.hpp  size.hpp  size_radial.hpp  speed.hpp  velocity.hpp  weapon.hpp  weapon_holder.hpp
src/core/: app.cpp  app.hpp  constants.hpp  game.cpp  game.hpp
src/factories/: player_factory.hpp  projectile_factory.hpp  weapon_factory.hpp
src/services/: player_component_service.cpp  player_component_service.hpp
src/systems/: input_system.cpp  input_system.hpp  movement_system.cpp  movement_system.hpp  render_system.cpp  render_system.hpp
